--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,12 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "files.eol": "\n",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "[scss]": {
-    "editor.defaultFormatter": "HookyQR.beautify"
-  },
   "eslint.format.enable": true,
-  "eslint.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
-  "typescript.format.enable": true
+  "typescript.format.enable": false,
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
