--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "dayjs": "^1.11.5",
     "framer-motion": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +44,19 @@
       ]
     },
     "rules": {
-      "react/react-in-jsx-scope": 0
+      "react/react-in-jsx-scope": "off",
+      "react/function-component-definition": [
+        "error",
+        {
+          "namedComponents": "arrow-function"
+        }
+      ],
+      "@typescript-eslint/no-unused-vars": [
+        "off",
+        {
+          "argsIgnorePattern": "^_"
+        }
+      ]
     }
   },
   "browserslist": {
