Add "Date Input" hook and date of birth input

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "source.fixAll.eslint": true
   },
   "eslint.format.enable": true,
-  "typescript.format.enable": false,
+  "typescript.format.enable": true,
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
