--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -45,6 +46,7 @@
     },
     "rules": {
       "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
       "react/function-component-definition": [
         "error",
         {
