--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chat",
-  "version": "0.1.0",
+  "name": "social-app",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "dayjs": "^1.11.5",
+    "express": "^4.18.1",
     "framer-motion": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,9 +27,14 @@
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
-    "start": "set BROWSER=none && react-scripts start",
+    "start": "react-scripts start",
+    "dev": "npm run server | npm start",
+    "server": "tsc -p ./server --watch | nodemon -w ./build/server ./build/server",
     "build": "react-scripts build",
+    "postbuild": "npm run build-server",
+    "build-server": "tsc -p ./server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,7 +48,8 @@
     ],
     "parserOptions": {
       "project": [
-        "tsconfig.json"
+        "tsconfig.json",
+        "server/tsconfig.json"
       ]
     },
     "rules": {
@@ -85,6 +92,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "nodemon": "^2.0.20",
     "prettier": "2.7.1",
     "sass": "^1.54.7"
   }
