--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "dayjs": "^1.11.5",
     "express": "^4.18.1",
     "framer-motion": "^7.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "nedb": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:4000",
@@ -82,6 +85,10 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/nedb": "^1.8.12",
+    "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.2.0",
