--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "express": "^4.18.1",
     "framer-motion": "^7.2.1",
