Make multiple changes about user session
- Add profile and account routes for API
- Add RTK Query slices [profile, account] to Redux
- Add route for profile by userID
- Display fetched profile on the Profile Page
- Display logged user data on the Nav Bar

--- a/package.json
+++ b/package.json
@@ -63,6 +63,14 @@
           "props": false
         }
       ],
+      "no-underscore-dangle": [
+        "error",
+        {
+          "allow": [
+            "_id"
+          ]
+        }
+      ],
       "react/react-in-jsx-scope": "off",
       "react/prop-types": "off",
       "react/function-component-definition": [
