--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "framer-motion": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
     "nedb": "^1.8.0",
@@ -27,6 +28,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sharp": "^0.31.0",
     "typescript": "^4.8.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
@@ -101,8 +103,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/nedb": "^1.8.12",
+    "@types/sharp": "^0.31.0",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
