--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/downscale": "^1.0.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
+    "downscale": "^1.0.6",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "framer-motion": "^7.2.1",
