Add following and improve search item look

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         }
       ],
       "react/react-in-jsx-scope": "off",
+      "react/require-default-props": "off",
       "react/prop-types": "off",
       "react/function-component-definition": [
         "error",
