--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "framer-motion": "^7.2.1",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "nedb": "^1.8.0",
     "react": "^18.2.0",
@@ -31,11 +32,12 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sharp": "^0.31.0",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2",
     "typescript": "^4.8.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:4000",
   "scripts": {
     "start": "react-scripts start",
     "dev": "npm run server | npm start",
