--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-build": "node ./build/server",
     "dev": "npm run server | npm start",
     "server": "tsc -p ./server --watch | nodemon -w ./build/server ./build/server",
     "build": "react-scripts build",
