--- a/package.json
+++ b/package.json
@@ -36,7 +36,19 @@
     "socket.io-client": "^4.5.2",
     "typescript": "^4.8.2",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,6 +75,10 @@
         "server/tsconfig.json"
       ]
     },
+    "ignorePatterns": [
+      "src/serviceWorkerRegistration.ts",
+      "src/service-worker.ts"
+    ],
     "rules": {
       "no-param-reassign": [
         "error",
