Improve meta theme color experience

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
       "src/service-worker.ts"
     ],
     "rules": {
+      "consistent-return": "off",
       "no-param-reassign": [
         "error",
         {
