--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "axios": "^0.27.2",
+    "axios": "^1.2.0",
     "dayjs": "^1.11.5",
     "downscale": "^1.0.6",
     "express": "^4.18.1",
@@ -141,7 +141,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "nodemon": "^2.0.20",
-    "prettier": "2.7.1",
+    "prettier": "^2.8.0",
     "sass": "^1.54.7"
   }
 }
