--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^7.2.1",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
+    "mock-match-media": "^0.4.2",
     "nedb": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -112,6 +113,15 @@
       ]
     }
   },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    },
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -143,7 +153,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.0",
-    "sass": "^1.54.7",
     "source-map-explorer": "^2.5.3"
   }
 }
