--- a/package.json
+++ b/package.json
@@ -134,6 +134,16 @@
       "last 1 safari version"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/express-fileupload": "^1.4.1",
@@ -152,7 +162,6 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.0",
-    "source-map-explorer": "^2.5.3"
+    "prettier": "^2.8.0"
   }
 }
