--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,6 +30,7 @@
       "purpose": "maskable"
     }
   ],
+  "id": "#social-app/sibite",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#1da1f2",
